<?xml version="1.0"?>
<package format="2">
    <name>ad1_msgs</name>
    <version>0.1.0</version>
    <description>The ad1_msgs package</description>
    <maintainer email="hi@rovitek.com">swpark</maintainer>
    <license>Apache 2.0</license>


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>std_msgs</build_depend>
    <exec_depend>std_msgs</exec_depend>
    <build_depend>geometry_msgs</build_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <build_depend>roscpp</build_depend>
    <exec_depend>roscpp</exec_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <export>
    </export>

</package>
